<resources>
    <string name="app_name">Trade Alert</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Portfolio">Portfolio</string>
    <string name="Search">Search</string>
    <string name="Sign_out">Sign out</string>
    <string name="Title">Title</string>
    <string name="Subtitle">Subtitle</string>
    <string name="Error_getting_data">Error getting data</string>
    <string name="Invalid_response">Invalid response</string>
    <string name="Details">Details</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Already_have_an_account_login">Already have an account? Login!</string>
    <string name="Dont_have_an_account_register">Don\'t have an account? Register!</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Enter_a_username">Enter a username</string>
    <string name="Enter_a_password">Enter a password</string>
    <string name="Enter_a_valid_email_address">Enter a valid email address</string>
    <string name="ad_unit_id">ca-app-pub-7704895981554483/2877749050</string>


    <string name="search_url"><![CDATA[https://www.google.com/finance/match?matchtype=matchall&ei=NU_wV4iMCdemeJfGuZAG&q=]]></string>
    <string name="login_url">http://149.56.110.157:3000/api/users/login/</string>
    <string name="signup_url">http://149.56.110.157:3000/api/users/register/</string>
    <string name="portfolio_url">http://149.56.110.157:3000/api/users/portfolio/</string>
    <string name="realtime_url">http://149.56.110.157:3000/api/stocks/:symbol/:index/realtime</string>
    <string name="realtime_volume_url">http://149.56.110.157:3000/api/stocks/:symbol/volume</string>
    <string name="checkDatabase_url">http://149.56.110.157:3000/api/stocks/:symbol/</string>
    <string name="addToDatabase_url">http://149.56.110.157:3000/api/stocks/</string>


    <string name="Authenticating">Authenticating…</string>
    <string name="Creating_account">Creating account…</string>
    <string name="Getting_portfolio">Getting portfolio…</string>
    <string name="Open">Open</string>
    <string name="Previous_close">Previous close</string>
    <string name="Volume">Volume</string>
    <string name="_50_day_volume_avg">50 day volume avg</string>
    <string name="Market_cap">Market cap</string>
    <string name="PE_ratio">P/E Ratio</string>
    <string name="Earnings_per_share">Earnings per share</string>
    <string name="Current_yield">Current yield</string>
    <string name="Number_of_shares_traded_today">Number of shares traded today</string>
    <string name="Price_of_a_stock_divided_by_earnings_per_share">Price of a stock divided by earnings per share</string>
    <string name="Portion_of_a_company_s_profit_allocated_to_each_outstanding_share_of_common_stock">Portion of a company\'s profit allocated to each outstanding share of common stock</string>
    <string name="Annual_dividends_divided_by_current_stock_price">Annual dividends divided by current stock price</string>
    <string name="Estimated_value_of_the_common_equity">Estimated value of the common equity</string>
    <string name="Previous_trading_day_s_last_reported_trade_price">Previous trading day\'s last reported trade price</string>
    <string name="Opening_price">Opening price</string>
    <string name="Average_share_volume_for_the_past_50_trading_days">Average share volume for the past 50 trading days</string>
    <string name="notification_message">{COUNT} Stocks have a higher volume then the 30 day average</string>
    <string name="Todays_alert">Today\'s alert</string>
    <string name="About">About</string>
    <string name="Trade_Alert_version">Trade Alert version</string>
    <string name="App_options">App options</string>
    <string name="Sign_out_of_application_and_clear_data">Sign out of application and clear data</string>
    <string name="Remove_ads">Remove ads</string>
    <string name="Remove_ads_with_a_one_time_payment_of_99">Remove ads with a one time payment of $0.99 (Restart app)</string>
    <string name="Select_a_stock_from_the_suggestions">Select a stock from the suggestions</string>
</resources>
