<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/About">

        <Preference
            android:key="about_trade_alert"
            android:summary="TRADE_ALERT_VERSION"
            android:title="@string/Trade_Alert_version" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/App_options">

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="remove_ads"
            android:summary="@string/Remove_ads_with_a_one_time_payment_of_99"
            android:title="@string/Remove_ads" />

        <Preference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:key="sign_out"
            android:summary="@string/Sign_out_of_application_and_clear_data"
            android:title="@string/Sign_out" />

    </PreferenceCategory>
</PreferenceScreen>